Implmentation of Flash Cards w/ Buttons

--- a/flashcards/src/App.css
+++ b/flashcards/src/App.css
@@ -46,6 +46,12 @@
   color: black;
   margin: 1em;
   padding: 5em;
-  text-align: center;;
+  text-align: center;
+}
+
+#button-layout {
+  display: flex;
+  justify-content: space-evenly;
+  text-decoration: solid;
 }
 
